--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@ body {
     background-color: #1e272e;
     font-size: 16px;
 }
+
 .container {
     max-width: 800px;
     margin: 60px auto;
 }
+
 h1 {
     font-family: 'Chewy', cursive;
     font-size: 3rem;
@@ -13,14 +15,23 @@ h1 {
     margin: 120px 0 60px;   
     color: #9b59b6;
 }
+
+#resolution {
+    font-family: Calibri;
+    font-size: 1.4em;
+    text-align: center;
+}
+
 .dices {
     display: flex;
     justify-content: space-around;
 }
+
 .dice {
     width: 200px;
     height: 200px;
 }
+
 #rollIt {
     background-color: #2ecc71;
     font-family: 'Exo', sans-serif;
@@ -35,8 +46,35 @@ h1 {
     border-style: none;
     cursor: pointer;
 }
+
 #leftDice {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
+#yourDice, #computer {
+    display: block;
+    margin: .5em 0 1em 0;
+    font-family: Calibri;
+    font-size: 1.2em;
+    text-align: center;
+    color: #fff;
+}
+
+@media only screen and (max-width: 768px) {
+    .container {
+        max-width: 600px;
+        margin: 30px auto;
+    }
+
+    .dice {
+        width: 150px;
+        height: 150px;
+    }
+
+    #rollIt {
+        margin-top: 2em;
+        width: 130px;
+    }
+  }
